Set Java version to 17